--- a/includes/html/footer.html
+++ b/includes/html/footer.html
@@ -1,5 +1,5 @@
 	<div id="footer">
-		<p>Copyright &copy; <a href="#">Plain and Simple</a> 2007 | Designed by <a href="http://www.edg3.co.uk/">edg3.co.uk</a> | Sponsored by <a href="http://www.opendesigns.org/">Open Designs</a> | Valid <a href="http://jigsaw.w3.org/css-validator/">CSS</a> &amp; <a href="http://validator.w3.org/">XHTML</a></p>
+		<p>Bài tập nhóm cuối kì nhóm 8</p>
 	</div>
 </body>
 </html>
